  threads::shared were loaded, you might get an error of the form 'Type of arg
  1 to threads::shared::share must be one of $@% at .../Log/Dispatch/Syslog.pm
  line 67, near "$thread_lock)"'. Reported by David Schweikert.

- Added support for auth-related parameters and replyto to
  Log::Dispatch::Email::MailSender. Patch by Rohan Carly. Based on GitHub #10.


2.46     2015-08-05

- Really make the per-thread locking in the Syslog output work. Based on a
  patch by David Schweikert. GitHub #9.


2.45     2015-06-14

- Don't include threads and threads::shared in list of dependencies. This is
  only needed for Log::Dispatch::Syslog and is loaded at runtime as needed
  (which has its own issues but ...). Reported by Kent Fredric. RT #103392.


2.44     2014-10-18

- The fix for a buffered email output in the last release introduced a bug
  with _non-buffered_ email outputs. This would cause a fatal error during
  global destruction when the DESTROY method was called. Reported by Christ
  Hutchinson. RT #99474.


2.43     2014-10-05

- Fixed the thread locking in Log::Dispatch::Syslog (I hope). The previous
  version caused Perl to crash when per-thread locking was enabled. Note that
  I don't use threads so I haven't tested this. Patch by Sergio Fernández
  Muñoz. RT # 99208.

- If a buffered email output is being destroyed during global destruction and
  still has messages in the buffer, we warn and do not attempt to send the
  messages. During global destruction, the package we use to send email may
  already be destroyed, leading to weird errors when we try to use
  it. Reported by Mark Overmeer. RT #97733.

- In 2.42 I added the ability to pass a hashref for the socket parameter given
  to Log::Dispatch::Syslog, but I forgot to mention this here. This is
  necessary to support remote logging. Patch by David Coppit. RT #93045.

2.42     2014-08-12

- Added a Log::Dispatch->clone() method. This returns shallow clone. The