@@ -23,6 +23,7 @@ prereqs_skip = threads::shared
 -remove = Test::Version
 
 [Prereqs / DevelopRequires]
+IPC::Run3 = 0
 MIME::Lite = 0
 Mail::Send = 0
 Mail::Sender = 0
